# wesleycoder

./: .aliases  .editorconfig  .env.yaml  .gitattributes  .gitconfig  .gitignore  .infisical.json  .markdownlint.yaml  .markdownlintrc  .sops.yaml  AGENTS.md  Caddyfile  Cargo.toml  README.md  config.nims  deno.json  mise.toml  package.json  pitchfork.toml  root.crt  sources.txt
.astro/: content.d.ts  data-store.json  settings.json
.opencode/: config.json
.zed/: settings.json  tasks.json
apps/alternet/: Cargo.toml  mise.toml
apps/codefactor/: client.ts  deno.json  mise.toml  server.ts
apps/db/: .gitignore  jsconfig.json  mise.toml
apps/exercism/: mise.toml
apps/filegarden/: config.nims  filegarden.nimble  mise.toml
apps/home/: astro.config.ts  deno.json  global.css  index.html  layout.eta  main.ts  mise.toml  vite-env.d.ts  vite.config.ts  vite.config.ts.timestamp-1764829086072-c62e602162243.mjs
apps/irc/: inspircd.conf  ngircd.conf  ngircd.motd
apps/manim/: .gitignore  .prettierrc  Dockerfile.linux  astro.config.ts  bridge.ts  config.nims  deno.json  gen_one_br_input.nim  global.css  index.html  main.nim  manim.nim  manim.nimble  mise.toml  nim.cfg  one_br.nim  tsconfig.json
apps/manim/android/app/src/main/cpp/: CMakeLists.txt
apps/nina/: .gitignore  config.nims  generate_ffi.nim  mise.toml  nats.conf  nina.nim  nina.nimble  test_nina  test_nina.nim
apps/one_br/: .gitignore  gen_input.nim  mise.toml  nim.cfg  one_br.nim  one_br.nimble
pkgs/: mise.toml
shared/: jujutsu.schema.json  mise.schema.json  pitchfork-schema.json  pitchfork.schema.json
(+319 files in other folders)
